--- a/index.html
+++ b/index.html
@@ -1,84 +1,123 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MindPlay - Terms of Service</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Terms of Service – MindPlay</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      margin: 20px;
-      max-width: 800px;
-    }
-    h1, h2 {
+      font-family: "Poppins", Arial, sans-serif;
+      background-color: #f9fafb;
       color: #333;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
+    header {
+      background: linear-gradient(135deg, #0070f3, #4f46e5);
+      color: white;
+      text-align: center;
+      padding: 2rem 1rem;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+      font-weight: 600;
+    }
+    main {
+      max-width: 800px;
+      margin: 2rem auto;
+      background: white;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+    }
+    h2 {
+      color: #4f46e5;
+      border-bottom: 1px solid #e5e7eb;
+      padding-bottom: 0.3rem;
+      margin-top: 1.8rem;
     }
     a {
-      color: #1a73e8;
+      color: #2563eb;
       text-decoration: none;
     }
     a:hover {
       text-decoration: underline;
     }
-    ul {
-      margin-top: 0;
+    footer {
+      text-align: center;
+      font-size: 0.9rem;
+      color: #666;
+      margin: 3rem 0 1rem;
     }
   </style>
 </head>
 <body>
-  <h1>MindPlay – Terms of Service</h1>
-  <p><strong>Ultimo aggiornamento:</strong> 11 dicembre 2025</p>
-  <p>Benvenuto su MindPlay. Usando l’app, accetti di rispettare questi Termini di Servizio. Se non li accetti, non usare l’app.</p>
+  <header>
+    <h1>Terms of Service – MindPlay</h1>
+  </header>
 
-  <h2>1. Accettazione dei termini</h2>
-  <p>L’uso di MindPlay implica l’accettazione dei presenti termini. Ci riserviamo il diritto di modificarli in qualsiasi momento: continuando a usare l’app, accetti le modifiche.</p>
+  <main>
+    <p>Benvenuto su MindPlay. Usando l’app, accetti di rispettare questi Termini di Servizio. Se non li accetti, non usare l’app.</p>
 
-  <h2>2. Uso consentito</h2>
-  <ul>
-    <li>MindPlay è destinata all’intrattenimento e all’allenamento mentale.</li>
-    <li>L’età minima per usare l’app è 13 anni (o età legale nel tuo paese).</li>
-    <li>È vietato usare l’app per scopi illegali, dannosi o non autorizzati.</li>
-  </ul>
+    <h2>1. Accettazione dei termini</h2>
+    <p>L’uso di MindPlay implica l’accettazione dei presenti termini. Ci riserviamo il diritto di modificarli in qualsiasi momento: continuando a usare l’app, accetti le modifiche.</p>
 
-  <h2>3. Restrizioni</h2>
-  <ul>
-    <li>Modificare, copiare, distribuire, vendere o fare reverse engineering dell’app.</li>
-    <li>Tentare di manipolare punteggi, statistiche o annunci pubblicitari.</li>
-    <li>Inviare malware, spam o contenuti illegali tramite l’app.</li>
-  </ul>
+    <h2>2. Uso consentito</h2>
+    <ul>
+      <li>MindPlay è destinata all’intrattenimento e all’allenamento mentale.</li>
+      <li>L’età minima per usare l’app è 13 anni (o età legale nel tuo paese).</li>
+      <li>È vietato usare l’app per scopi illegali, dannosi o non autorizzati.</li>
+    </ul>
 
-  <h2>4. Contenuti dell’utente</h2>
-  <p>Al momento MindPlay non permette agli utenti di caricare contenuti. Se in futuro questa funzionalità sarà aggiunta, restano valide le regole di proprietà e responsabilità dei contenuti.</p>
+    <h2>3. Restrizioni</h2>
+    <ul>
+      <li>Modificare, copiare, distribuire, vendere o fare reverse engineering dell’app.</li>
+      <li>Tentare di manipolare punteggi, statistiche o annunci pubblicitari.</li>
+      <li>Inviare malware, spam o contenuti illegali tramite l’app.</li>
+    </ul>
 
-  <h2>5. Proprietà intellettuale</h2>
-  <ul>
-    <li>Tutto il codice e la grafica originale di MindPlay sono di proprietà di Marco Buccheri.</li>
-    <li>Suoni, loghi e marchi presenti nell’app provengono da siti con licenza free copyright e sono utilizzati secondo i termini di tali licenze.</li>
-    <li>È vietato copiare, ridistribuire o vendere qualsiasi parte dell’app senza autorizzazione.</li>
-  </ul>
+    <h2>4. Contenuti dell’utente</h2>
+    <p>Al momento MindPlay non permette agli utenti di caricare contenuti. Se in futuro questa funzionalità sarà aggiunta, restano valide le regole di proprietà e responsabilità dei contenuti.</p>
 
-  <h2>6. Limitazione di responsabilità</h2>
-  <p>MindPlay è fornita “così com’è”. Non ci assumiamo responsabilità per:</p>
-  <ul>
-    <li>Danni diretti o indiretti derivanti dall’uso dell’app</li>
-    <li>Perdita di dati o malfunzionamenti</li>
-    <li>Interruzioni del servizio</li>
-  </ul>
+    <h2>5. Proprietà intellettuale</h2>
+    <ul>
+      <li>Tutto il codice e la grafica originale di MindPlay sono di proprietà di Marco Buccheri.</li>
+      <li>Suoni, loghi e marchi presenti nell’app provengono da siti con licenza free copyright e sono utilizzati secondo i termini di tali licenze.</li>
+      <li>È vietato copiare, ridistribuire o vendere qualsiasi parte dell’app senza autorizzazione.</li>
+    </ul>
 
-  <h2>7. Aggiornamenti dell’app e dei termini</h2>
-  <p>Ci riserviamo il diritto di aggiornare l’app e questi Termini in qualsiasi momento. Gli utenti devono accettare la versione aggiornata per continuare a usare l’app.</p>
+    <h2>6. Limitazione di responsabilità</h2>
+    <p>MindPlay è fornita “così com’è”. Non ci assumiamo responsabilità per:</p>
+    <ul>
+      <li>Danni diretti o indiretti derivanti dall’uso dell’app</li>
+      <li>Perdita di dati o malfunzionamenti</li>
+      <li>Interruzioni del servizio</li>
+    </ul>
 
-  <h2>8. Account e sicurezza</h2>
-  <p>Attualmente MindPlay non richiede registrazione. Se in futuro verranno aggiunti account, gli utenti saranno responsabili della sicurezza delle proprie credenziali.</p>
+    <h2>7. Aggiornamenti dell’app e dei termini</h2>
+    <p>Ci riserviamo il diritto di aggiornare l’app e questi Termini in qualsiasi momento. Gli utenti devono accettare la versione aggiornata per continuare a usare l’app.</p>
 
-  <h2>9. Privacy</h2>
-  <p>Per informazioni su come raccogliamo e usiamo i dati personali, consulta la nostra <a href="https://gimmy1999.github.io/mindplay-privacy/" target="_blank">Privacy Policy</a>.</p>
+    <h2>8. Account e sicurezza</h2>
+    <p>Attualmente MindPlay non richiede registrazione. Se in futuro verranno aggiunti account, gli utenti saranno responsabili della sicurezza delle proprie credenziali.</p>
 
-  <h2>10. Risoluzione delle controversie</h2>
-  <p>Questi Termini sono regolati dalla legge italiana. Qualsiasi controversia sarà di competenza esclusiva del Tribunale di Palermo.</p>
+    <h2>9. Privacy</h2>
+    <p>Per informazioni su come raccogliamo e usiamo i dati personali, consulta la nostra <a href="https://gimmy1999.github.io/mindplay-privacy/" target="_blank">Privacy Policy</a>.</p>
 
-  <h2>11. Pagamenti</h2>
-  <p>MindPlay non prevede acquisti in-app al momento. Se saranno introdotti acquisti o abbonamenti, saranno disciplinati da termini separati o aggiornamenti a questi Termini.</p>
+    <h2>10. Risoluzione delle controversie</h2>
+    <p>Questi Termini sono regolati dalla legge italiana. Qualsiasi controversia sarà di competenza esclusiva del Tribunale di Palermo.</p>
+
+    <h2>11. Pagamenti</h2>
+    <p>MindPlay non prevede acquisti in-app al momento. Se saranno introdotti acquisti o abbonamenti, saranno disciplinati da termini separati o aggiornamenti a questi Termini.</p>
+  </main>
+
+  <footer>
+    © <span id="year"></span> MindPlay. Tutti i diritti riservati.
+  </footer>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
