--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
   </header>
 
   <main>
+    <p><strong>Ultimo aggiornamento:</strong> 11 dicembre 2025</p>
     <p>Benvenuto su MindPlay. Usando l’app, accetti di rispettare questi Termini di Servizio. Se non li accetti, non usare l’app.</p>
 
     <h2>1. Accettazione dei termini</h2>
